syntax = "proto3";

package lightops.service;

option csharp_namespace = "LightOps.Commerce.Proto.Services.Navigation";

import "Protos/type/navigation.proto";

service NavigationService {
  // Persists a navigation
  rpc Persist(PersistRequest) returns (PersistResponse) {}

  // Deletes a navigation
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}

  // Gets a list of navigations by handle
  rpc GetByHandles(GetByHandlesRequest) returns (GetByHandlesResponse) {}

  // Gets a list of navigations by ids
  rpc GetByIds(GetByIdsRequest) returns (GetByIdsResponse) {}
}

/*
 * Persist messages
 */
 message PersistRequest {
  // The id of the navigation to persist
  string id = 1;

  // The navigation to persist
  lightops.type.Navigation navigation = 2;
}

message PersistResponse {
  // The status code of the operation
  StatusCode status_code = 1;

  // The errors occoured, if any
  repeated string errors = 2;

  enum StatusCode {
    UNKNOWN = 0;
    OK = 1;
    UNAVAILABLE = 2;
    INVALID = 3;
  }
}

/*
 * Delete messages
 */
message DeleteRequest {
  // The id of the navigation to delete
  string id = 1;
}

message DeleteResponse {
  // The status code of the operation
  StatusCode status_code = 1;

  enum StatusCode {
    UNKNOWN = 0;
    OK = 1;
    UNAVAILABLE = 2;
  }
}

/*
 * GetByHandles messages
 */
message GetByHandlesRequest {
  // The handles of the navigation requested
  repeated string handles = 1;
}

message GetByHandlesResponse {
  // The navigations found, if any
  repeated lightops.type.Navigation navigations = 1;
}

/*
 * GetByIds messages
 */
message GetByIdsRequest {
  // The ids of the navigations requested
  repeated string ids = 1;
}

message GetByIdsResponse {
  // The navigations found, if any
  repeated lightops.type.Navigation navigations = 1;
}
